openshift/service.yaml
# Service para Multiagent
kind: Service
apiVersion: v1
metadata:
  name: hml-senac-wxorchestrate-multiagent-service
  namespace: hml-senac-orquestrator-chatbotx
  labels:
    app: hml-senac-wxorchestrate-multiagent
spec:
  ports:
    - name: 3000-tcp
      protocol: TCP
      port: 3000
      targetPort: 3000
  internalTrafficPolicy: Cluster
  type: ClusterIP
  ipFamilyPolicy: SingleStack
  sessionAffinity: None
  selector:
    app: hml-senac-wxorchestrate-multiagent
