openshift/route-store.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: hml-senac-wxorchestrate-multiagent-store
  namespace: hml-senac-orquestrator-chatbotx
  labels:
    app: hml-senac-wxorchestrate-multiagent
  annotations:
    haproxy.router.openshift.io/timeout: 180s
spec:
  host: hml-senac-orquestrator-chatbotx.ocp-senac-11f45abbd458185944dd806416f75c34-0000.us-south.containers.appdomain.cloud
  path: /multiagent/store/api/v1
  to:
    kind: Service
    name: hml-senac-wxorchestrate-multiagent-service
    weight: 100
  port:
    targetPort: 3000-tcp
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
